Bug 420888 - RKward freezes on startup with high CPI load if no valid script path in the .rkworkplace file
Summary: RKward freezes on startup with high CPI load if no valid script path in the ....
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-02 07:49 UTC by fsando
Modified: 2020-05-02 09:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fsando 2020-05-02 07:49:54 UTC
SUMMARY
If there is no valid path to a script file in the .rkworkplace file RKward freezes with yellow engine indicator.

STEPS TO REPRODUCE
1. Open an RKward.RData workspace
2. Close all scripts
3. Close and save
4. Reopen the RKward.RData workspace

OBSERVED RESULT
RKward freezes with high CPU load and a yellow R engine indicator

EXPECTED RESULT
RKward starts normally

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 18.04 (kernel: 5.15.0-99-generic)
(available in About System)
KDE Plasma Version: 5.12.9
KDE Frameworks Version: 5.47.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION
---Problem description---
Please fill in the missing bits *in English*.

Please give a brief summary on the problem:
###Please fill in###

What - in detail - did you do directly before you encountered this problem?
###Please fill in###

When you try to repeat the above, does the problem occur again (no, sometimes, always)?
###Please fill in###
Always

If applicable: When doing the same thing in an R session outside of RKWard, do you see the same problem?
###Please fill in###

Do you have any further information that might help us to track this problem down? In particular, if applicable, can you provide sample data and sample R code to reproduce this problem?
###Please fill in###
After editing the .rkworkplace file by hand and adding in a valid path RKward starts normally. Removing the path by hand triggers the bug.

I can provide an strace of the process if necessary.

RKWard is available in many different packagings, and sometimes problems are specific to one method of installation. How did you install RKWard (which file(s) did you download)?
###Please fill in###


---Session Info---
-- Frontend --
RKWard version: 0.7.1z+0.7.2+devel2
KDE Frameworks version (runtime): 5.47.0
KDE Frameworks version (compile time): 5.44.0
Qt version (runtime): 5.9.5
Qt version (compile time): 5.9.5
Using QtWebKit for HTML rendering
Local config directory: /home/finn/.config
RKWard storage directory: /home/finn/.rkward/
Backend version (as known to the frontend): 3.6.3

Debug message file (this may contain relevant diagnostic output in case of trouble):
/tmp/rkward.frontend

-- Backend --
Debug message file (this may contain relevant diagnostic output in case of trouble):
/tmp/rkward.rbackend

R version (compile time): 3.6.3  (2020-02-29 r77875)
R runtime session info:
R version 3.6.3 (2020-02-29)
Platform: x86_64-pc-linux-gnu (64-bit)
Running under: Ubuntu 18.04.4 LTS

Matrix products: default
BLAS:   /usr/lib/x86_64-linux-gnu/blas/libblas.so.3.7.1
LAPACK: /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.7.1

Random number generation:
 RNG:     Mersenne-Twister 
 Normal:  Inversion 
 Sample:  Rounding 
 
locale:
 [1] LC_CTYPE=en_DK.UTF-8          LC_NUMERIC=C                  LC_TIME=en_DK.UTF-8           LC_COLLATE=en_DK.UTF-8        LC_MONETARY=en_DK.UTF-8       LC_MESSAGES=en_DK.UTF-8       LC_PAPER=en_DK.UTF-8          LC_NAME=en_DK.UTF-8           LC_ADDRESS=en_DK.UTF-8        LC_TELEPHONE=en_DK.UTF-8      LC_MEASUREMENT=en_DK.UTF-8    LC_IDENTIFICATION=en_DK.UTF-8

attached base packages:
[1] stats     graphics  grDevices utils     datasets  methods   base     

other attached packages:
[1] rkward_0.7.2

loaded via a namespace (and not attached):
[1] compiler_3.6.3 tools_3.6.3
Comment 1 Thomas Friedrichsmeier 2020-05-02 09:35:24 UTC
Git commit 7dc28480fe742396a4e1f0758b763ce80d932e1d by Thomas Friedrichsmeier.
Committed on 02/05/2020 at 09:34.
Pushed by tfry into branch 'master'.

Fix hang when opening empty workplace, and associated crash on exit.

M  +1    -0    ChangeLog
M  +1    -0    rkward/rkward.cpp
M  +1    -1    rkward/windows/rkworkplaceview.cpp

https://commits.kde.org/rkward/7dc28480fe742396a4e1f0758b763ce80d932e1d