Fix hang when opening empty workplace, and associated crash on exit.

BUG: 420888